tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_regression_7195_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "3869654505094197118",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/81W227CMAx1etGWITRp+4LtZXsMtNA+IgEfEoH6Hf10FGGDa1KEwEFYqpLKyfE5jp3WwNEMPsEKHDO4NFqzwtE9ZjNFLJeSp0nE80SUzw2MJ77F0cLwkII/VxRsI5y08FtXL21EnyL/yjLMBPhzwi/S4Ls3xNn0Q3wQcacwbF6+h3y8kbfoe0c/zT9xbgVeinPnnLTz9h3hnzFtwdb92QeKsSeYy1+Ry0Q1WNP5Ui1wI1/JYl+7X3LxznkHTf8MV66DF9WbRThq6pX7ShivPQPxjyzfH4xqU2L94Ji6f74YrtQwgXMPFb1+/KZ1juLmLA/yrHj8Uqz/w/ePiI7iAZ5d42dd5Tu/8Pt9vfMyTyDyFLsHEp1ZNYXLOiKTPXPPPUC8gybHcOU6uFE/gO7P1LN6sBnR8+wePABi3zBBtQsAAA==",
  "debug_symbols": "ldTNioUgHAXwd3Hdwq80e5VhuFjZRRALq4EhevexoQshbc4m+sv5KSicnQyu294vH8dpIe3XTsLU29VPMU/7UZEu+RD8+3VfJvT8MPWfX2Ybz3FZbVpJy5WuiItD/tMi+9EHR9qaHt8VYRoWDSwMKjiFBYMFfxTafERTl0LAQsKihoWChYbF85ub5hKCylIYVAgKCwYLjgr5eAZj6hKM81JwWAhYSFjUsFCweHxzQT+Xq4p8TcE8A/MczAswL5H8kacfm7ztgruKfNxif+v19Xd2RcXPaerdsCV3lv2t58+bE7ISJm+bt/4D",
  "file_map": {
    "50": {
      "source": "fn bar(y: Field) {\n    assert(y != 0);\n}\n\nfn foo(x: Field) {\n    // Safety: test\n    let y = unsafe { baz(x) };\n    bar(y);\n}\n\nunconstrained fn baz(x: Field) -> Field {\n    x\n}\n\nfn main(x: Field, y: pub Field) {\n    // Safety: test\n    let x = unsafe { baz(x) };\n    foo(x);\n    foo(y);\n    assert(x != y);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
